<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_encontrar"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_encontrar_acoes" />
        <item
            android:id="@+id/nav_listar_ongs"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_listar_ong" />
        <item
            android:id="@+id/nav_criar_acao"
            android:icon="@drawable/ic_playlist_add_black_24dp"
            android:title="@string/menu_criar_acao"/>
        <item
            android:id="@+id/nav_listar_acoes"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_listar_acoes" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_sobre_ajudaqui" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
