<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNomeOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNomeOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nome" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmailOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutIdentificadorOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtIdentificadorOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_identificador" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutSenhaOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSenhaOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_senha"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/layoutEndWebOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEndWebOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endWeb" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spnAreaOng"
        android:id="@+id/txtSpnArea"
        android:text="@string/lbl_spn_area"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnAreaOng"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCepOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCepOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_cep" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRuaOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRuaOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_rua" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNumeroOng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNumeroOng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_numero" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCriarOng"
        style="@style/botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastroOng" />
</LinearLayout>