<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_desc" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spnStatus"
        android:id="@+id/txtSpnCria"
        android:text="@string/lbl_spn"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spnStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCadAcao"
        style="@style/botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastroAcao" />
</LinearLayout>